--- a/TODO.txt
+++ b/TODO.txt
@@ -5,12 +5,12 @@ TODO List
 - be able to edit items which have task set and 'complete' them
 - have set email reminder work with database + website
 - actually have it send emails
-- * add the checkboxes to item titles
+- (DONE) * add the checkboxes to item titles
 - (DONE) * get index page displaying just the root children
-- get index page email form working
 - (DONE) have heirachy working (more than 2 levels i suppose?, and only show the current item path) 
 - figure out how we want to set email reminders for children of the current item (use the same form?, 
 position it diferently..)
+- get index page email form working
 
 
 %%%% important to do but do other priority things first %%%%%
@@ -40,6 +40,7 @@ another page
 
 Points of discussion
 
+- limit the size of item titles? say to 100 characters (because it makes everything look ugly)
 - allow time in email reminder setting? instead of just sending at midnight
 - the gap between item titles and bodies look a bit weird (to have space for the mouse over links), should i
 position the same as email reminders?
