--- a/TODO.txt
+++ b/TODO.txt
@@ -10,13 +10,13 @@ TODO List
 - (DONE) have heirachy working (more than 2 levels i suppose?, and only show the current item path) 
 - (DONE) figure out how we want to set email reminders for children of the current item (use the same form?, 
 position it diferently..)
-- get index page email form working
+- (DONE) get index page email form working
 - (DONE) "Add Task to Root" has "Enable Complete/Incomplete status?" while "Adding task to task" has "Make Task?" in same place. Make both into "Make Task?".
 
 
 %%%% important to do but do other priority things first %%%%%
 
-- on index page, put add item form at the bottom of content pane instead of link to the heirachy link
+- (DONE) on index page, put add item form at the bottom of content pane instead of link to the heirachy link
 - allow deleting and editing of email reminders
 - editing an item still resets it to the bottom of the heirachy
 - have heirachy only show current item path + root items
