--- a/TODO.txt
+++ b/TODO.txt
@@ -20,7 +20,6 @@ position it diferently..)
 - allow deleting and editing of email reminders
 - editing an item still resets it to the bottom of the heirachy
 - have heirachy only show current item path + root items
-- Hovering over an email address brings up "Edit" and "Delete" Icons at the far right of screen and they are unclickable.
 - Add emails to the database
 
 %%%% we'll get here %%%%%
@@ -29,7 +28,7 @@ position it diferently..)
 another page
 - when deleting the items children, refresh the page instead of going to index
 - (DONE) * center the confirm, clear, cancel links in all tabs
-- * if clicking set email reminder and the form is already open, close it
+- (SCRAPED)* if clicking set email reminder and the form is already open, close it
 - (DONE) * OCD formatting
 - make the current item path on the heirachy a filled circle, its children and other root items discs
 - when hovering over the buttons, the underline dissapears
