--- a/TODO.txt
+++ b/TODO.txt
@@ -12,6 +12,7 @@ TODO List
 position it diferently..)
 - (DONE) get index page email form working
 - (DONE) "Add Task to Root" has "Enable Complete/Incomplete status?" while "Adding task to task" has "Make Task?" in same place. Make both into "Make Task?".
+- Add emails to the database
 
 
 %%%% important to do but do other priority things first %%%%%
@@ -20,33 +21,13 @@ position it diferently..)
 - allow deleting and editing of email reminders
 - editing an item still resets it to the bottom of the heirachy
 - have heirachy only show current item path + root items
-- Add emails to the database
 
 %%%% we'll get here %%%%%
 
 - have the editing done in-line (or replace the text with textfields) on the same page, instead of directing to 
 another page
 - when deleting the items children, refresh the page instead of going to index
-- (DONE) * center the confirm, clear, cancel links in all tabs
-- (SCRAPED)* if clicking set email reminder and the form is already open, close it
-- (DONE) * OCD formatting
 - make the current item path on the heirachy a filled circle, its children and other root items discs
 - when hovering over the buttons, the underline dissapears
-
-
-
-* means me (eric) will get to it soon
-
-
-
-
-Points of discussion
-
-- when i make the 'cancel' link a button, you can't click it if the textfields are empty because of 
-force requires, so i coded it in html
-- limit the size of item titles? say to 100 characters (because it makes everything look ugly)
-- allow time in email reminder setting? instead of just sending at midnight
-- the gap between item titles and bodies look a bit weird (to have space for the mouse over links), should i
-position the same as email reminders?
-- mouse overs not working on phone browsers since theres no mouse (but you can click the empty space)
-- items are being displayed in alphabetical order (while being added in), order by creation date instead?
+- remove old email reminder notes on the page (ie the ones already sent)
+- only send the email reminder IF the task is still incomplete (if set by user)
